# corporate-text-pipeline

./: .gitignore  NotesForWill.md  README.md  config.yaml  config.yaml.example  pyproject.toml  requirements.txt
data/: README.md
data/firm_lists/: Unique firm-year list.xlsx  cik_year_katelyn.csv  cik_year_lachlan.csv  cik_year_will.csv  pilot_fti_firms.csv  target_firm_years.csv  unique_firm_year_10k_list_cik_year_only.csv
data/processed/cleaned/: 0000027419_2017_10K_item_1.txt  0000027419_2017_10K_item_1a.txt  0000027419_2017_10K_item_7.txt  0000039911_2017_10K_item_1.txt  0000039911_2017_10K_item_1a.txt  0000039911_2017_10K_item_7.txt  0000094845_2017_10K_item_1.txt  0000094845_2017_10K_item_1a.txt  0000094845_2017_10K_item_7.txt  0000104169_2017_10K_item_1.txt  0000104169_2017_10K_item_1a.txt  0000104169_2017_10K_item_7.txt  0000320187_2017_10K_item_1.txt  0000320187_2017_10K_item_1a.txt  0000320187_2017_10K_item_7.txt  0000794367_2017_10K_item_1.txt  0000794367_2017_10K_item_1a.txt  0000794367_2017_10K_item_7.txt  0000850209_2017_10K_item_1.txt  0000850209_2017_10K_item_1a.txt  0000850209_2017_10K_item_7.txt  0001018724_2017_10K_item_1.txt  0001018724_2017_10K_item_1a.txt  0001018724_2017_10K_item_7.txt  0001018840_2017_10K_item_1.txt  0001018840_2017_10K_item_1a.txt  0001018840_2017_10K_item_7.txt  0001089063_2017_10K_item_1.txt  0001089063_2017_10K_item_1a.txt  0001089063_2017_10K_item_7.txt
data/processed/cleaned/processing_logs/: processing_results_20260126_183256.csv  processing_results_20260126_183745.csv  processing_results_20260126_185029.csv  processing_results_20260127_104759.csv  processing_summary_20260126_183256.txt  processing_summary_20260127_104759.txt
data/raw/10k/download_logs/: successful_20260126_181909.csv  summary_20260126_181909.txt
docs/: DOWNLOADER_USAGE.md  QUICK_START.md  SETUP.md  TROUBLESHOOTING.md  WORKFLOW_GUIDE.md  github_guide.md  pilot_study_protocol.md
scripts/: README.md  __init__.py  download_10k.py  process_batch.py  validate_data.py
sec-edgar-filings/0000824142/10-K/0001026608-10-000026/: full-submission.txt
sec-edgar-filings/0000824142/10-K/0001026608-11-000023/: full-submission.txt
sec-edgar-filings/0000824142/10-K/0001026608-12-000022/: full-submission.txt
src/: README.md  config.py
src/downloaders/: README.md  __init__.py  csr_downloader.py  sec_downloader.py
src/processors/: README.md  __init__.py  parser.py  text_cleaner.py
src/utils/: README.md  __init__.py  logging_utils.py  validators.py
tests/: README.md  test_downloaders.py  test_processors.py  test_utils.py
