# Modern Python Project Configuration
# This file replaces the old setup.py and requirements.txt files

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "corporate-text-pipeline"
version = "0.1.0"
description = "Automated pipeline for measuring supply chain transparency from 10-K filings"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Will Diebel", email = "william.diebel@moore.sc.edu"},
    {name = "Katelyn Thompson"},
    {name = "Lachlan Carroll"},
]
keywords = ["supply-chain", "transparency", "10-k", "sec-edgar", "text-analysis"]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "sec-edgar-downloader>=5.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "nltk>=3.8.0",
    "textblob>=0.17.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "tenacity>=8.2.0",
    "jsonschema>=4.19.0",
    "colorlog>=6.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ipython>=8.12.0",
]
analysis = [
    "jupyter>=1.0.0",
    "ipykernel>=6.25.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
all = [
    "corporate-text-pipeline[dev,analysis]",
]

[project.scripts]
download-10k = "scripts.download_10k:main"
process-batch = "scripts.process_batch:main"
validate-data = "scripts.validate_data:main"

[project.urls]
Homepage = "https://github.com/williamdiebel/corporate-text-pipeline"
Repository = "https://github.com/williamdiebel/corporate-text-pipeline"
Issues = "https://github.com/williamdiebel/corporate-text-pipeline/issues"

[tool.setuptools]
packages = ["src", "src.downloaders", "src.processors", "src.utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=html --cov-report=term"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/venv/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
